# SCAlgorithm

./: README.md
root_tree/: CMakeLists.txt
root_tree/include/: sc_rtree.h  sc_rtree_def.h  sc_rtree_iterator.h  sc_rtree_node.h
root_tree/src/: sc_rtree.cc  sc_rtree_iterator.cc
root_tree/unit_test/: unit_test.cc
slink_list/: CMakeLists.txt
slink_list/include/: sc_slink_iterator.h  sc_slink_list.h  sc_slink_node.h
slink_list/src/: sc_slink_iterator.cc
slink_list/unit_test/: unit_test.cc
